added jar start paramters